Adicionado rota humidity
