# api/src/routes.js
@@ -1,6 +1,6 @@
 const express = require('express');
 
-const { getPrecipitation, getEvaporation, getClouds } = require('./mateomatics.service');
+const { getPrecipitation, getEvaporation, getClouds, getHumidity } = require('./mateomatics.service');
 
 const routes = express();
 
@@ -27,6 +27,15 @@ routes.get('/clouds/lat/:lat/long/:long', async (req, res) => {
     const { format } = req.query;
 
     const result = await getClouds(lat, long, format);
+
+    return res.status(200).send(result)
+})
+
+routes.get('/humidity/lat/:lat/long/:long', async (req, res) => {
+    const { lat, long } = req.params;
+    const { format } = req.query;
+
+    const result = await getHumidity(lat, long, format);
 
     return res.status(200).send(result)
 })
